# vad-transcriber

./: CLAUDE.md  Makefile  README.md
.cursor/rules/: transcribe-model.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: front-run-formatter.yaml  front-run-lint.yaml  front-run-test.yaml  front-run-tsc.yaml  server-run-formatter.yaml  server-run-linter.yaml  server-run-test.yaml
docs/: README.md  architecture-overview.md  requirements.md
docs/frontend/: cording-guidline.md  directory-structure.md
docs/server/: architecture-diagram.md  (+1 more)
frontend/: README.md  biome.json  components.json  package.json  vitest.config.js
server/: .cursorrules  .gitignore  README.md  docker-compose.yaml
server/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
server/api/src/: main.py
server/api/src/app/: main.py
server/api/src/app/adapters/: __init__.py  base.py  transcription.py  vad.py
server/api/src/app/api/: __init__.py  deps.py
server/api/src/app/api/v1/: __init__.py  router.py
server/api/src/app/api/v1/endpoints/: __init__.py  health.py
server/api/src/app/core/: __init__.py  config.py  database.py
server/api/src/app/models/: __init__.py
server/api/src/app/repositories/: __init__.py
server/api/src/app/schemas/: __init__.py  health.py  websocket.py
server/api/src/app/services/: __init__.py  audio_processor.py  health_service.py  vad_chunk.py
server/api/src/app/utils/: env.py  openai_transcribe.py
server/api/src/app/websocket/: __init__.py  handlers.py
server/api/test/: test_main.py
(+23 files in other folders)
